--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
   "name": "quantum-nexus",
   "version": "1.0.0",
-  "description": "Ultimate Tap Revolution with Crypto, NFT, AR/VR",
-  "main": "server.js",
+  "description": "The most advanced Telegram tap game with quantum mechanics",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "vue": "^3.4.0",
+    "@vueuse/core": "^10.7.0",
+    "gsap": "^3.12.2",
+    "three": "^0.159.0",
+    "@types/three": "^0.159.0",
+    "pinia": "^2.1.7",
+    "vue-router": "^4.2.5",
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
+    "lodash-es": "^4.17.21",
+    "confetti-js": "^0.0.18",
+    "particles.js": "^2.0.0",
+    "chart.js": "^4.4.0",
+    "vue-chartjs": "^5.3.0"
   },
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "keywords": [
-    "tap-clicker",
-    "crypto",
-    "nft",
-    "telegram",
-    "webapp"
-  ],
-  "author": "Quantum Nexus Team",
-  "license": "MIT"
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.5.2",
+    "vite": "^5.0.8",
+    "vue-tsc": "^1.8.25",
+    "typescript": "^5.3.3",
+    "@types/lodash-es": "^4.17.12",
+    "sass": "^1.69.5",
+    "unplugin-auto-import": "^0.17.2",
+    "unplugin-vue-components": "^0.26.0"
+  }
 }
